2001-11-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Normalise modes in TE_TM case.
	
2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Virtualise kz.
	* slabmode.h: Ditto.
	* slabmode.cpp: Ditto.
	* slaboverlap.cpp: Ditto.

2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Add support fow TE_TM polarisation.
	* slab.h: Ditto.