@@ -1,5 +1,9 @@
 2001-11-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* slabmode.cpp: Account for TE_TM polarisation.
+
+2001-11-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* slab.cpp: Normalise modes in TE_TM case.
 	
 2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
